# numerology-white-paper

./: .coverage  .flake8  .gitignore  API_DEPLOYMENT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  _quarto.yml  api-client.js  api.py  app.py  build-all.sh  build.sh  interactive-components.html  pyproject.toml  railway.json  render.yaml  requirements-api.txt  requirements-app.txt  requirements-colab.txt  requirements.txt  setup.py  setup.py.bak  test.qmd
.github/workflows/: api-webhook.yml  ci.yml  data-analysis.yml  deploy-platform.yml  docs.yml  pages.yml  publish-research.yml  research-pdf.yml
.quarto/embed/: index.embed.ipynb  index_simple.embed.ipynb  index_working.embed.ipynb  manuscript.embed.ipynb  test.embed.ipynb
.quarto/project-cache/: deno-kv-file
.quarto/xref/: INDEX  a7166a18
_manuscript/: simple_manuscript-preview.html  simple_manuscript.embed.ipynb  simple_manuscript.out.ipynb
docs/: conf.py  index.rst
docs/_static/: custom.css
docs/api/: astrology.rst  dignity.rst  modules.rst  numerology.rst  utils.rst  vedic_numerology.rst  visualization.rst
docs/development/: build_system.rst  contributing.rst  testing.rst
docs/user_guide/: getting_started.rst  numerology_calculations.rst
notebooks/: 01_numerology_calculations.ipynb
research_paper/research_paper/: numerology_astrology_correlation.qmd
scripts/: correlation_analysis.py  generate_pdf.py  generate_temporal_analysis.py
src/: __init__.py
src/vedic_numerology/: __init__.py
src/vedic_numerology/astrology/: __init__.py  ayanamsa.py  chart.py  ephemeris.py
src/vedic_numerology/config/: __init__.py  constants.py  settings.py
src/vedic_numerology/dignity/: __init__.py  exaltation_matrix.py  friendship_matrix.py  modifiers.py  scorer.py
src/vedic_numerology/numerology/: __init__.py  calculator.py  planet_mapping.py  sunrise_correction.py
src/vedic_numerology/utils/: __init__.py  datetime_utils.py  validation.py
src/vedic_numerology/visualization/: __init__.py  comparison_charts.py  radar_charts.py  support_index.py  temporal_comparison.py
src/vedic_numerology_astrology.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
styles/: conditional-content.lua  custom.css  format-specific.lua  html-metadata.yml  pdf-metadata.yml
tests/: __init__.py  test_astrology.py  test_dignity.py  test_integration.py  test_numerology.py
